# GenericSCPIDriver

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
generic_scpi_driver/: __init__.py  _version.py  driver.py  generic_aqctl.py  session.py  visa_session.py
tests/: test_driver_generation.py  test_generic_aqctl.py
