[tool.poetry]
name = "generic-scpi-driver"
version = "1.3.4"
description = "A generic template for creating python object-based drivers for SCPI hardware devices which communicate via VISA. Compatible with ARTIQ  installed with [artiq] modifier"
authors = ["Charles Baynham <charles.baynham@gmail.com>"]
readme = "README.md"
packages = [{include = "generic_scpi_driver"}]

[tool.poetry.dependencies]
python = "^3.10"
pyvisa = "^1.13.0"
pyserial = "^3.5"
pyvisa-py = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
pytest = "^7.4.2"
black = "^23.9.1"


[tool.poetry.group.artiq.dependencies]
sipyco = {git = "https://github.com/m-labs/sipyco.git"}

[build-system]
requires = ["poetry-core", "poetry"]
build-backend = "poetry.core.masonry.api"
