[tool.poetry]
name = "generic-scpi-driver"
version = "1.6.2"
description = "A generic template for creating python object-based drivers for SCPI hardware devices which communicate via VISA. Compatible with ARTIQ  installed with [artiq] modifier"
authors = ["Charles Baynham <charles.baynham@gmail.com>"]
readme = "README.rst"
packages = [{ include = "generic_scpi_driver" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pyvisa = "^1"
pyserial = "^3"
pyvisa-py = "^0.7.0"


[tool.poetry.group.dev.dependencies]
sphinx = ">=6"
sphinx-rtd-theme = "^1.3.0"
pytest = "^7.4.2"
black = "^23.9.1"


[tool.poetry.group.artiq.dependencies]
numpy = ">1.0"
sipyco = { git = "https://github.com/m-labs/sipyco.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
